--- a/tinc_graphs/static/external/index.html
+++ b/tinc_graphs/static/external/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Retiolum Graphs (anon)</title>
+    <title>Tinc VPN Graphs (Public)</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-colorpicker/2.3.0/css/bootstrap-colorpicker.css" rel="stylesheet">
     <link rel="stylesheet" href="css/graphs.css">
@@ -17,7 +17,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Anon Tinc Graphs</a>
+          <a class="navbar-brand" href="#">Public VPN Graphs</a>
         </div>
       </div>
    </nav> 
@@ -25,9 +25,8 @@
 
       <div class="starter-template">
         <h3>Fresh Graphs</h3>
-        <p class="lead"><a href="http://krebsco.de">Krebsco.de</a></p>
-        <img id='primary-graph' class="splash-image" data-toggle="magnify" src="retiolum_1.svg" width=100%></img>
-        <a href="./retiolum_1.png">as PNG</a>
+        <img id='primary-graph' class="splash-image" data-toggle="magnify" src="vpn0_1.svg" width=100%></img>
+        <a href="./vpn0_1.png">as PNG</a>
       </div>
     </div>
   </body>
