--- a/tinc_graphs/static/internal/map.html
+++ b/tinc_graphs/static/internal/map.html
@@ -13,9 +13,9 @@
         height: 100%;
       }
     </style>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&key=AIzaSyAn9ihuuhCRh4J9tPQebHyVohaqSg8sWUg"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ui-map/3.0-rc1/jquery.ui.map.js"></script>
+    <script src="//maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&key=AIzaSyCF0GtMAObpESdJ2vuMJIviQdTufZXmNUg"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-ui-map/3.0-rc1/jquery.ui.map.js"></script>
     <script>
       var map;
       var markerlist ={};
